Change example html title

--- a/example.html
+++ b/example.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My first Chartist Tests</title>
+    <title>Chartist Crosshair Cursor</title>
     <link rel="stylesheet" href="bower_components/chartist/dist/chartist.min.css">
     <style type="text/css">
       .myChart {
