--- a/example.html
+++ b/example.html
@@ -15,10 +15,17 @@
   </head>
   <body>
     <div class='chart'></div>
+    <div class='info'>
+      <p>Frozen: { data.frozen | json }</p>
+      <p>Highlighted points: { data.highlightedPoints | json }</p>
+    </div>
 
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/rivets/0.9.6/rivets.bundled.min.js'></script>
     <script src="bower_components/chartist/dist/chartist.js"></script>
     <script src="src/scripts/chartist-plugin-crosshairCursor.js"></script>
     <script>
+      var data = { frozen: false }
+
       var chart = new Chartist.Line('.chart', {
       labels: ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday'],
         series: [
@@ -50,12 +57,15 @@
       );
 
       chart.on('crosshairCursor:frozen', function (isFrozen) {
-        console.log("Chart is frozen?", isFrozen)
+        data.frozen = isFrozen
       }, false);
 
       chart.on('crosshairCursor:hovered', function(highlightedPoints) {
-        console.log("Highlighted points", highlightedPoints)
+        data.highlightedPoints = highlightedPoints
       }, false);
+
+      rivets.formatters.json = JSON.stringify
+      rivets.bind(document.querySelector('.info'), { data: data })
     </script>
   </body>
 </html>
