--- a/example.html
+++ b/example.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Chartist Crosshair Cursor</title>
-    <link rel="stylesheet" href="bower_components/chartist/dist/chartist.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chartist/0.11.0/chartist.min.css">
     <style type="text/css">
       .myChart {
         width: 600px;
@@ -21,7 +21,7 @@
     </div>
 
     <script src='https://cdnjs.cloudflare.com/ajax/libs/rivets/0.9.6/rivets.bundled.min.js'></script>
-    <script src="bower_components/chartist/dist/chartist.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chartist/0.11.0/chartist.min.js"></script>
     <script src="src/scripts/chartist-plugin-crosshairCursor.js"></script>
     <script>
       var data = { frozen: false }
