--- a/example.html
+++ b/example.html
@@ -26,7 +26,7 @@
       h1 { margin-bottom: 0px; text-transform: uppercase; }
       h3 { margin-top: 10px; text-transform: uppercase; font-size: 13px; }
       .info { width: 500px; }
-      .myChart {
+      .crosshairCursor-wrapper {
         width: 600px;
         height: 120px;
         margin: 50px;
@@ -91,7 +91,6 @@
           },
           plugins: [
             Chartist.plugins.crosshairCursor({
-              wrapperName: '.myChart',
               x: true,
               y: true,
               click: function(cursor, points) {
