update example.html with new hover function name

--- a/example.html
+++ b/example.html
@@ -103,7 +103,7 @@
                 cursor.isFrozen() ? cursor.unfreeze() : cursor.freeze() // click to freeze
                 // data.highlightedPoints = points.length // click to see point data
               },
-              pointHover: function(cursor, points) {
+              hover: function(cursor, points) {
                 data.highlightedPoints = points // hover to see point data
                 data.total = points.length
               },
