Add available methods to readme, rename freeze option, fix grunt errors.

--- a/example.html
+++ b/example.html
@@ -107,7 +107,7 @@
                 data.highlightedPoints = points // hover to see point data
                 data.total = points.length
               },
-              frozenStatus: function(status) {
+              freezeChange: function(status) {
                 data.frozen = status
               }
             })
